server.log

> backend@1.0.0 dev
> node scripts/start-dev.js

🔧 Iniciando ambiente de desenvolvimento...

✅ Redis já está rodando!

🚀 Iniciando servidor Node.js...

file:///home/user/projetos/CRM-CLINICA/back/utils/patientDataExtractor.js:1
import { parsePtBrDate, parseRelativeDate } from './dateParser.js';
                        ^^^^^^^^^^^^^^^^^
SyntaxError: The requested module './dateParser.js' does not provide an export named 'parseRelativeDate'
    at ModuleJob._instantiate (node:internal/modules/esm/module_job:213:21)
    at async ModuleJob.run (node:internal/modules/esm/module_job:320:5)
    at async ModuleLoader.import (node:internal/modules/esm/loader:606:24)
    at async asyncRunEntryPointWithESMLoader (node:internal/modules/run_main:117:5)

Node.js v20.20.0
